Fixed alignment issues

--- a/login/signstyle.css
+++ b/login/signstyle.css
@@ -350,11 +350,10 @@ text-decoration: none;
 
 .signcontainer .signupAccount .button
 {
-    margin-top: 20px;
     display: flex;
     justify-content: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .signcontainer .signupAccount .button input
@@ -428,6 +427,7 @@ text-decoration: none;
 .signcontainer .user-details #error6
 {
     margin-left: 205px;
+    visibility: hidden;
 }
 
 .signcontainer .user-details #error7
